# ai_chat_lib

./: .gitignore  README.md  pyproject.toml
src/: .env_example  debug_google_provider.py  debug_main.py  debug_main_console_chat.py
src/ai_chat_lib/: __init__.py  character_manager.py  chat_interface.py  data_adapter.py  prompt_manager.py
src/ai_chat_lib/models/: character.py  message.py
src/ai_chat_lib/providers/: bailian_demo.py  base.py  google_provider.py  openai_base_provider.py  openai_like_provider.py
src/ai_chat_lib/storage/: base.py  file_storage.py  sqlite_storage.py
src/ai_chat_lib/utils/: chat_creator.py
storage/characters/: 友好助手.py  猫娘.py  编程专家.py
tests/: test_google_ai.py
