[project]
name = "ai-chat-lib"
version = "0.1.0"
description = ""
authors = [{ name = "Panda", email = "tgyezitang@163.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "openai (>=1.102.0,<2.0.0)",
    "google-genai (>=1.32.0,<2.0.0)",
    "pytest>=8.4.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
]

[tool.hatch.build.targets.sdist]
include = ["src/ai_chat_lib"]

[tool.hatch.build.targets.wheel]
include = ["src/ai_chat_lib"]

[tool.hatch.build.targets.wheel.sources]
"src/ai_chat_lib" = "ai_chat_lib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
